DataProvider & connection to backend

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,17 @@
   },
   "dashboard": {
     "title": "Jassari admin"
+  },
+  "youthProfiles": {
+    "title": "Youth profiles",
+    "search": "Search",
+    "firstName": "First name",
+    "lastName": "Last name",
+    "birthDate": "Birth date",
+    "membershipNumber": "Membership number",
+    "phone": "Phone number",
+    "photoUsage": "Photo usage",
+    "language": "Language"
   }
 }
 
