--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -8,6 +8,9 @@
   "youthProfiles": {
     "title": "Nuorisoprofiilit",
     "search": "Etsi",
+    "basicInfo": "Perustiedot",
+    "extraInfo": "Lisätiedot",
+    "approverInfo": "Huoltajan tiedot",
     "firstName": "Etunimi",
     "lastName": "Sukunimi",
     "birthDate": "Syntymäpäivä",
