--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -8,6 +8,9 @@
   "youthProfiles": {
     "title": "Ungdomsprofiler",
     "search": "Sök",
+    "basicInfo": "Grundläggande",
+    "extraInfo": "Ytterligare info",
+    "approverInfo": "Förälderinformation",
     "firstName": "Förnamn",
     "lastName": "Efternamn",
     "birthDate": "Födelsedatum",
