Create button translation.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,6 +8,7 @@
   "youthProfiles": {
     "title": "Youth profiles",
     "search": "Search",
+    "create": "Create",
     "basicInfo": "Basic info",
     "extraInfo": "Additional info",
     "approverInfo": "Parental information",
