--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -36,7 +36,7 @@
     "phoneMin": "Min length six characters",
     "email": "Invalid email",
     "birthDate": "The birthday should be dd.mm.yyyy.",
-    "ageRestriction": "Only 8-25 years old can create youth profile."
+    "ageRestriction": "Only 8-25 years olds can create youth profile."
   },
   "LANGUAGE_OPTIONS": {
     "ENGLISH": "English",
