--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -12,6 +12,7 @@
     "basicInfo": "Basic info",
     "extraInfo": "Additional info",
     "approverInfo": "Parental information",
+    "name": "Name",
     "firstName": "First name",
     "lastName": "Last name",
     "birthDate": "Birth date (dd.mm.yyyy)",
@@ -19,15 +20,18 @@
     "phone": "Phone number",
     "photoUsage": "Photo usage",
     "language": "Language",
+    "address": "Address",
     "streetAddress": "Street address",
     "city": "City",
     "postalCode": "Postal code",
     "email": "Email",
+    "school": "School and lass",
     "schoolName": "School",
     "schoolClass": "Class",
     "languageAtHome": "Language at home",
     "photoApprovedTrue": "Yes",
-    "photoApprovedFalse": "No"
+    "photoApprovedFalse": "No",
+    "back": "Back to search results"
   },
   "validation": {
     "tooLong": "Too long",
