--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -19,7 +19,7 @@
     "membershipNumber": "Jäsennumero",
     "phone": "Puhelinnumero",
     "photoUsage": "Kuvauslupa",
-    "photoUsageHelpText": "Lapsestani saa oottaa kuvia ja niitä saa käyttää Helsingin kaupungin sisäisessä ja ulkoisessa viestinnässä ",
+    "photoUsageHelpText": "Lapsestani saa ottaa kuvia ja niitä saa käyttää Helsingin kaupungin sisäisessä ja ulkoisessa viestinnässä.",
     "language": "Kieli",
     "address": "Osoite",
     "streetAddress": "Katuosoite",
