Fixed birthDate translation

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -16,6 +16,7 @@
     "firstName": "First name",
     "lastName": "Last name",
     "birthDate": "Birth date (dd.mm.yyyy)",
+    "birthDateWithoutHelp": "Birth date",
     "membershipNumber": "Membership number",
     "phone": "Phone number",
     "photoUsage": "Photo usage",
