--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -16,6 +16,7 @@
     "firstName": "Etunimi",
     "lastName": "Sukunimi",
     "birthDate": "Syntymäpäivä (pp.kk.vvvv)",
+    "birthDateWithoutHelp": "Syntymäpäivä",
     "membershipNumber": "Jäsennumero",
     "phone": "Puhelinnumero",
     "photoUsage": "Kuvauslupa",
