--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -27,7 +27,7 @@
     "city": "City",
     "postalCode": "Postal code",
     "email": "Email",
-    "school": "School and lass",
+    "school": "School and class",
     "schoolName": "School",
     "schoolClass": "Class",
     "languageAtHome": "Language at home",
