--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -19,13 +19,10 @@
     "birthDateWithoutHelp": "Syntymäpäivä",
     "membershipNumber": "Jäsennumero",
     "membershipStatus": "Tila",
-    "PENDING": "Odottaa",
-    "ACTIVE": "Aktiivinen",
-    "EXPIRED": "Vanhentunut",
     "phone": "Puhelinnumero",
     "photoUsage": "Kuvauslupa",
-    "approved": "Kyllä",
-    "denied": "Ei",
+    "photoUsageApproved": "Kyllä",
+    "photoUsageDenied": "Ei",
     "photoUsageHelpText": "Lapsestani saa ottaa kuvia ja niitä saa käyttää Helsingin kaupungin sisäisessä ja ulkoisessa viestinnässä.",
     "language": "Kieli",
     "address": "Osoite",
@@ -50,6 +47,11 @@
     "email": "Virheellinen sähköpostiosoite",
     "birthDate": "Syntymäpäivän tulee olla muotoa pp.kk.yyyy.",
     "ageRestriction": "Palveluun voi rekisteröityä iältään 8-25 vuotiaat."
+  },
+  "PROFILE_STATUS": {
+    "PENDING": "Odottaa",
+    "ACTIVE": "Aktiivinen",
+    "EXPIRED": "Vanhentunut"
   },
   "LANGUAGE_OPTIONS": {
     "ENGLISH": "Englanti",
