Added missing fields.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -33,6 +33,8 @@
     "school": "School and class",
     "schoolName": "School",
     "schoolClass": "Class",
+    "membershipInformation": "Membership information",
+    "expirationDate": "Valid until",
     "languageAtHome": "Language at home",
     "photoApprovedTrue": "Yes",
     "photoApprovedFalse": "No",
