--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -33,6 +33,8 @@
     "school": "Skola och klass",
     "schoolName": "Skola",
     "schoolClass": "Klass",
+    "membershipInformation": "Information om medlemskap",
+    "expirationDate": "Gäller tills",
     "languageAtHome": "Språk hemma",
     "photoApprovedTrue": "Ja",
     "photoApprovedFalse": "Nej",
