--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -25,6 +25,7 @@
     "photoUsageDenied": "No",
     "photoUsageHelpText": "Pictures of my child can be taken and used for internal and external communications in the City of Helsinki.",
     "language": "Language",
+    "profileLanguage": "Profile language",
     "address": "Address",
     "streetAddress": "Street address",
     "city": "City",
