--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -25,6 +25,7 @@
     "photoUsageDenied": "Ei",
     "photoUsageHelpText": "Lapsestani saa ottaa kuvia ja niitä saa käyttää Helsingin kaupungin sisäisessä ja ulkoisessa viestinnässä.",
     "language": "Kieli",
+    "profileLanguage": "Profiilin kieli",
     "address": "Osoite",
     "streetAddress": "Katuosoite",
     "city": "Kaupunki",
