--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -40,6 +40,8 @@
     "photoApprovedTrue": "Kyllä",
     "photoApprovedFalse": "Ei",
     "back": "Takaisin hakutulokseen",
+    "edit": "Muokkaa",
+    "renew": "Uusi jäsenyys",
     "searchResults": "Haulla löytyi %{smart_count} tulos |||| Haulla löytyi %{smart_count} tulosta"
   },
   "validation": {
@@ -50,6 +52,11 @@
     "email": "Virheellinen sähköpostiosoite",
     "birthDate": "Syntymäpäivän tulee olla muotoa pp.kk.yyyy.",
     "ageRestriction": "Palveluun voi rekisteröityä iältään 8-25 vuotiaat."
+  },
+  "notifyMessages": {
+    "created": "Nuorisoprofiili lisätty!",
+    "updated": "Profiilin muokkaus onnistui!",
+    "renewed": "Jäsenyys uusitty onnistuneesti!"
   },
   "PROFILE_STATUS": {
     "PENDING": "Odottaa",
