Save button has different text based on action.

--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -40,6 +40,7 @@
     "photoApprovedTrue": "Kyllä",
     "photoApprovedFalse": "Ei",
     "back": "Takaisin hakutulokseen",
+    "save": "Tallenna",
     "edit": "Muokkaa",
     "renew": "Uusi jäsenyys",
     "searchResults": "Haulla löytyi %{smart_count} tulos |||| Haulla löytyi %{smart_count} tulosta"
