--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -40,6 +40,7 @@
     "photoApprovedTrue": "Yes",
     "photoApprovedFalse": "No",
     "back": "Back to search results",
+    "save": "Save",
     "edit": "Edit",
     "renew": "Renew membership",
     "searchResults": "Search found %{smart_count} result |||| Search found %{smart_count} results"
