--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -41,6 +41,7 @@
     "photoApprovedFalse": "Nej",
     "back": "Tillbaka till sökresultaten",
     "save": "Spara",
+    "cancel": "Avbryt",
     "edit": "Redigera",
     "renew": "Förnya medlemskape",
     "searchResults": "Sökningen hittade ett resultat |||| Sökningen hittade %{smart_count} resultat"
