--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -30,6 +30,7 @@
     "streetAddress": "Katuosoite",
     "city": "Kaupunki",
     "postalCode": "Postinumero",
+    "country": "Maa",
     "email": "Sähköposti",
     "school": "Koulu ja luokka",
     "schoolName": "Koulu",
