--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -30,6 +30,7 @@
     "streetAddress": "Gatuadress",
     "city": "Stad",
     "postalCode": "Postnummer",
+    "country": "Land",
     "email": "E-post",
     "school": "Skola och klass",
     "schoolName": "Skola",
