Added missing translation key.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -63,6 +63,7 @@
   },
   "PROFILE_STATUS": {
     "PENDING": "Pending",
+    "RENEWING": "Renewing",
     "ACTIVE": "Active",
     "EXPIRED": "Expired"
   },
