--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -63,6 +63,7 @@
   },
   "PROFILE_STATUS": {
     "PENDING": "Väntar",
+    "RENEWING": "Förnya",
     "ACTIVE": "Aktiva",
     "EXPIRED": "Utgånget"
   },
