--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -63,6 +63,7 @@
   },
   "PROFILE_STATUS": {
     "PENDING": "Odottaa",
+    "RENEWING": "Uusiminen",
     "ACTIVE": "Aktiivinen",
     "EXPIRED": "Vanhentunut"
   },
