--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -45,7 +45,8 @@
     "cancel": "Cancel",
     "edit": "Edit",
     "renew": "Renew membership",
-    "searchResults": "Search found %{smart_count} result |||| Search found %{smart_count} results"
+    "searchResults": "Search found %{smart_count} result |||| Search found %{smart_count} results",
+    "makePrimaryAddress": "Gör till primäradress"
   },
   "validation": {
     "tooLong": "Too long",
