--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -46,7 +46,7 @@
     "edit": "Redigera",
     "renew": "Förnya medlemskape",
     "searchResults": "Sökningen hittade ett resultat |||| Sökningen hittade %{smart_count} resultat",
-    "makePrimaryAddress": "Make into primary address"
+    "makePrimaryAddress": "Gör till primäradress"
   },
   "validation": {
     "tooLong": "För lång",
