--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -45,7 +45,10 @@
     "cancel": "Cancel",
     "edit": "Edit",
     "renew": "Renew membership",
-    "searchResults": "Search found %{smart_count} result |||| Search found %{smart_count} results"
+    "searchResults": "Search found %{smart_count} result |||| Search found %{smart_count} results",
+    "makePrimaryAddress": "Make into primary address",
+    "removeAddress": "Remove",
+    "addAnotherAddress": "Add another address"
   },
   "validation": {
     "tooLong": "Too long",
