YM-313 | Change registration max age limit to 29
Changed the max age configuration to 29 and updated the corresponding
validation error messages.

--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -57,7 +57,7 @@
     "phoneMin": "Vähimmäispituus kuusi merkkiä",
     "email": "Virheellinen sähköpostiosoite",
     "birthDate": "Syntymäpäivän tulee olla muotoa pp.kk.yyyy.",
-    "ageRestriction": "Palveluun voi rekisteröityä iältään 8-25 vuotiaat."
+    "ageRestriction": "Palveluun voi rekisteröityä iältään 8-29 -vuotiaat."
   },
   "notifyMessages": {
     "created": "Nuorisoprofiili lisätty!",
