--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -8,7 +8,7 @@
   "youthProfiles": {
     "title": "Ungdomsprofiler",
     "search": "Sök",
-    "create": "Skapa",
+    "create": "Skapa ny ungdomsprofil",
     "basicInfo": "Grundläggande",
     "extraInfo": "Ytterligare info",
     "approverInfo": "Förälderinformation",
