--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -47,8 +47,10 @@
     "renew": "Förnya medlemskape",
     "searchResults": "Sökningen hittade ett resultat |||| Sökningen hittade %{smart_count} resultat",
     "makePrimaryAddress": "Gör till primäradress",
-    "removeAddress": "Poista",
-    "addAnotherAddress": "Lisää toinen osoite"
+    "removeAddress": "Avlägsna",
+    "addAnotherAddress": "Lägg till en annan adress",
+    "removeAdditionalContactPerson": "Avlägsna",
+    "addAdditionalContactPerson": "Lägg till en annan vårdnadshavare"
   },
   "validation": {
     "tooLong": "För lång",
