--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -50,7 +50,10 @@
     "removeAddress": "Remove",
     "addAnotherAddress": "Add another address",
     "removeAdditionalContactPerson": "Remove",
-    "addAdditionalContactPerson": "Add another guardian"
+    "addAdditionalContactPerson": "Add another guardian",
+    "guardianConfirmationWillBeSent": "Confirmation request will be sent to this address.",
+    "guardianConfirmationSent": "A confirmation request for membership has been sent to this address, the guardian has verified the information and approved the membership.",
+    "addGuardiansText": "Additional guardians may be contacted in issues relating to child's youth membership."
   },
   "validation": {
     "tooLong": "Too long",
