--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -50,7 +50,10 @@
     "removeAddress": "Avlägsna",
     "addAnotherAddress": "Lägg till en annan adress",
     "removeAdditionalContactPerson": "Avlägsna",
-    "addAdditionalContactPerson": "Lägg till en annan vårdnadshavare"
+    "addAdditionalContactPerson": "Lägg till en annan vårdnadshavare",
+    "guardianConfirmationWillBeSent": "Bekräftelse kommer att skickas till denna adress.",
+    "guardianConfirmationSent": "En bekräftelse på medlemskap har skickats till denna adress, vårdnadshavaren har verifierat informationen och godkänt medlemskapet.",
+    "addGuardiansText": "Ytterligare vårdnadshavare kan kontaktas i frågor som rör barnets ungdomsmedlemskap"
   },
   "validation": {
     "tooLong": "För lång",
