--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -25,7 +25,7 @@
     "photoUsageDenied": "Nej",
     "photoUsageHelpText": "Bilder av mitt barn kan tas och användas för intern och extern kommunikation i Helsingfors stad.",
     "language": "Språk",
-    "profileLanguage": "Profilspråk",
+    "profileLanguage": "Prefererat servicespråk",
     "address": "adress",
     "streetAddress": "Gatuadress",
     "city": "Stad",
