Change language at home field label

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -37,7 +37,7 @@
     "schoolClass": "Class",
     "membershipInformation": "Membership information",
     "expirationDate": "Valid until",
-    "languageAtHome": "Language at home",
+    "languageAtHome": "Primary Contact Language",
     "photoApprovedTrue": "Yes",
     "photoApprovedFalse": "No",
     "back": "Back to search results",
