--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -37,7 +37,7 @@
     "schoolClass": "Luokka",
     "membershipInformation": "Jäsenyyden tiedot",
     "expirationDate": "Voimassa",
-    "languageAtHome": "Kotona puhuttu kieli",
+    "languageAtHome": "Ensisijainen yhteydenottokieli",
     "photoApprovedTrue": "Kyllä",
     "photoApprovedFalse": "Ei",
     "back": "Takaisin hakutulokseen",
