--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -37,7 +37,7 @@
     "schoolClass": "Klass",
     "membershipInformation": "Information om medlemskap",
     "expirationDate": "Gäller tills",
-    "languageAtHome": "Språk hemma",
+    "languageAtHome": "Prefererat kontaktspråk",
     "photoApprovedTrue": "Ja",
     "photoApprovedFalse": "Nej",
     "back": "Tillbaka till sökresultaten",
