Support all youth languages

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -79,6 +79,7 @@
     "ENGLISH": "English",
     "FINNISH": "Finnish",
     "SWEDISH": "Swedish",
+    "FRENCH": "French",
     "ARABIC": "Arabic",
     "ESTONIAN": "Estonian",
     "RUSSIAN": "Russian",
