--- a/src/i18n/fi.json
+++ b/src/i18n/fi.json
@@ -79,6 +79,7 @@
     "ENGLISH": "Englanti",
     "FINNISH": "Suomi",
     "SWEDISH": "Ruotsi",
+    "FRENCH": "Ranska",
     "ARABIC": "Arabia",
     "ESTONIAN": "Eesti",
     "RUSSIAN": "Venäjä",
