--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -79,6 +79,7 @@
     "ENGLISH": "Engelska",
     "FINNISH": "Finska",
     "SWEDISH": "Svenska",
+    "FRENCH": "Franska",
     "ARABIC": "Arabiska",
     "ESTONIAN": "Estniska",
     "RUSSIAN": "Ryska",
